--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/poetry.json
+    - assets/beso.jpg
+    - assets/deseo.jpg
+    - assets/manos.jpg
+    - assets/ojos.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
