--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_arc_text: ^0.6.0
 
 dev_dependencies:
   flutter_test:
@@ -61,10 +62,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/poetry.json
-    - assets/beso.jpg
-    - assets/deseo.jpg
-    - assets/manos.jpg
-    - assets/ojos.jpg
+    - assets/images/
+    - assets/icons/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
